 (Format: Year/Month/Day)
Changes for 1.0.1:
*07/12/13:
   * Moved command parsing code all over the place -- expect any patches that
     add new commands to be broken (Mark, Simon)
     Added FbTk/CommandRegistry.cc/hh
     Removed FbCommandFactory.cc/hh CommandParser.cc/hh
*07/12/11:
   * Added new resize modes for key command StartResizing: NearestEdge, Left,
     Right, Top, Bottom (Mark)
     Window.cc
   * Only allow one menu to be open at a time (Mark)
     FbTk/Menu.cc/hh
*07/12/09:
   * Added OnTitlebar and Double modifiers to the keys file for clicks on the
     titlebar and double clicks, respectively (Mark, thanks Matteo Galiazzo)
     - For example, `OnTitlebar Double Mouse3 :Maximize' will maximize a window
       when you double click on the titlebar with the right mouse button
     - Note: if you have commands bound to both a single and double click, the
       single click command will still be executed on the first half of a double
       click
     - Added new key commands ShadeOn and ShadeOff that set whether or not a
       window is shaded, rather than toggling the current state
       Window.cc Keys.cc/hh FbCommandFactory.cc
*07/11/22:
   * Added some new special keys to the keys file: FocusIn, FocusOut, MouseOver,
     MouseOut, ChangeWorkspace (Mark)
     - FocusIn/FocusOut correspond to a window gaining or losing focus, e.g. the
       following will raise all xterms when one gains focus:
       FocusIn :If {Matches (xterm)} {Raise (xterm)} {}
     - MouseOver/MouseOut correspond to the mouse moving over the window or
       toolbar (when used with OnToolbar) -- OnDesktop not yet supported, e.g.
       the following will unshade a window when you move your mouse over it with
       alt pressed:
       Mod1 MouseOver :If {Matches (shaded=yes)} {Shade} {}
     - ChangeWorkspace corresponds to the workspace being changed, e.g. the
       following will set a different wallpaper for each workspace: